--- a/signal/tensorflow_core/kernels/BUILD
+++ b/signal/tensorflow_core/kernels/BUILD
@@ -15,6 +15,24 @@ tflm_signal_kernel_library(
 )
 
 tflm_signal_kernel_library(
+    name = "framer_kernel",
+    srcs = ["framer_kernel.cc"],
+    deps = [
+        "//signal/src:circular_buffer",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
+    name = "overlap_add_kernel",
+    srcs = ["overlap_add_kernel.cc"],
+    deps = [
+        "//signal/src:overlap_add",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
     name = "window_kernel",
     srcs = ["window_kernel.cc"],
     deps = [
