port c++ framer op to open source in tflm_signal  (#2104)
`port c++ framer op to open source in tflm_signal`

-port framer op and corresponding to new open source location for C++

BUG=[b/288965505](https://b.corp.google.com/288965505)

--- a/signal/src/BUILD
+++ b/signal/src/BUILD
@@ -4,6 +4,12 @@ package(
 )
 
 cc_library(
+    name = "circular_buffer",
+    srcs = ["circular_buffer.cc"],
+    hdrs = ["circular_buffer.h"],
+)
+
+cc_library(
     name = "complex",
     hdrs = ["complex.h"],
 )
