--- a/signal/micro/kernels/BUILD
+++ b/signal/micro/kernels/BUILD
@@ -9,6 +9,7 @@ cc_library(
     name = "register_signal_ops",
     srcs = [
         "delay.cc",
+        "energy.cc",
         "framer.cc",
         "overlap_add.cc",
         "rfft.cc",
@@ -24,6 +25,7 @@ cc_library(
     ],
     deps = [
         "//signal/src:circular_buffer",
+        "//signal/src:energy",
         "//signal/src:overlap_add",
         "//signal/src:rfft",
         "//signal/src:window",
@@ -187,6 +189,32 @@ cc_test(
     deps = [
         ":register_signal_ops",
         ":stacker_flexbuffers_generated_data",
+        "//tensorflow/lite/c:common",
+        "//tensorflow/lite/micro:op_resolvers",
+        "//tensorflow/lite/micro:test_helpers",
+        "//tensorflow/lite/micro/kernels:kernel_runner",
+        "//tensorflow/lite/micro/testing:micro_test",
+    ],
+)
+
+cc_library(
+    name = "energy_flexbuffers_generated_data",
+    srcs = [
+        "energy_flexbuffers_generated_data.cc",
+    ],
+    hdrs = [
+        "energy_flexbuffers_generated_data.h",
+    ],
+)
+
+cc_test(
+    name = "energy_test",
+    srcs = [
+        "energy_test.cc",
+    ],
+    deps = [
+        ":energy_flexbuffers_generated_data",
+        ":register_signal_ops",
         "//tensorflow/lite/c:common",
         "//tensorflow/lite/micro:op_resolvers",
         "//tensorflow/lite/micro:test_helpers",
