Adds FFT Auto Scale Op (#2134)
This PR adds additional FFT op functionality in the Signal library, namely adding the FFT Auto Scale operation.
Testing added in the original `fft_test.cc` and `fft_ops_test.py`.
BUG=[287346710](http://b/287346710)

--- a/python/tflite_micro/signal/BUILD
+++ b/python/tflite_micro/signal/BUILD
@@ -46,6 +46,10 @@ py_tflm_signal_library(
 py_test(
     name = "fft_ops_test",
     srcs = ["ops/fft_ops_test.py"],
+    data = [
+        "//python/tflite_micro/signal/ops/testdata:fft_auto_scale_test1.txt",
+        "//python/tflite_micro/signal/ops/testdata:rfft_test1.txt",
+    ],
     python_version = "PY3",
     srcs_version = "PY3",
     deps = [
