energy, framer, overlap_add python ops

--- a/python/tflite_micro/signal/ops/testdata/BUILD
+++ b/python/tflite_micro/signal/ops/testdata/BUILD
@@ -7,7 +7,9 @@ package(
 )
 
 exports_files([
+    "energy_test1.txt",
     "fft_auto_scale_test1.txt",
+    "framer_test1.txt",
     "rfft_test1.txt",
     "window_test1.txt",
 ])
