--- a/python/tflite_micro/signal/BUILD
+++ b/python/tflite_micro/signal/BUILD
@@ -16,7 +16,10 @@ cc_library(
     visibility = [":signal_friends"],
     deps = [
         ":delay_op_cc",
+        ":energy_op_cc",
         ":fft_ops_cc",
+        ":framer_op_cc",
+        ":overlap_add_op_cc",
         ":window_op_cc",
     ],
 )
@@ -31,7 +34,10 @@ py_library(
     visibility = ["//python/tflite_micro/signal/utils:__subpackages__"],
     deps = [
         ":delay_op",
+        ":energy_op",
         ":fft_ops",
+        ":framer_op",
+        ":overlap_add_op",
         ":window_op",
     ],
 )
@@ -60,6 +66,32 @@ py_test(
 )
 
 py_tflm_signal_library(
+    name = "energy_op",
+    srcs = ["ops/energy_op.py"],
+    cc_op_defs = ["//signal/tensorflow_core/ops:energy_op"],
+    cc_op_kernels = [
+        "//signal/tensorflow_core/kernels:energy_kernel",
+    ],
+)
+
+py_test(
+    name = "energy_op_test",
+    size = "small",
+    srcs = ["ops/energy_op_test.py"],
+    data = [
+        "//python/tflite_micro/signal/ops/testdata:energy_test1.txt",
+    ],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":energy_op",
+        "//python/tflite_micro/signal/utils:util",
+        requirement("numpy"),
+        requirement("tensorflow-cpu"),
+    ],
+)
+
+py_tflm_signal_library(
     name = "fft_ops",
     srcs = ["ops/fft_ops.py"],
     cc_op_defs = ["//signal/tensorflow_core/ops:fft_ops"],
@@ -80,6 +112,56 @@ py_test(
     deps = [
         ":fft_ops",
         "//python/tflite_micro/signal/utils:util",
+        requirement("numpy"),
+        requirement("tensorflow-cpu"),
+    ],
+)
+
+py_tflm_signal_library(
+    name = "framer_op",
+    srcs = ["ops/framer_op.py"],
+    cc_op_defs = ["//signal/tensorflow_core/ops:framer_op"],
+    cc_op_kernels = [
+        "//signal/tensorflow_core/kernels:framer_kernel",
+    ],
+)
+
+py_test(
+    name = "framer_op_test",
+    size = "small",
+    srcs = ["ops/framer_op_test.py"],
+    data = [
+        "//python/tflite_micro/signal/ops/testdata:framer_test1.txt",
+    ],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":framer_op",
+        "//python/tflite_micro/signal/utils:util",
+        requirement("numpy"),
+        requirement("tensorflow-cpu"),
+    ],
+)
+
+py_tflm_signal_library(
+    name = "overlap_add_op",
+    srcs = ["ops/overlap_add_op.py"],
+    cc_op_defs = ["//signal/tensorflow_core/ops:overlap_add_op"],
+    cc_op_kernels = [
+        "//signal/tensorflow_core/kernels:overlap_add_kernel",
+    ],
+)
+
+py_test(
+    name = "overlap_add_op_test",
+    size = "small",
+    srcs = ["ops/overlap_add_op_test.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":overlap_add_op",
+        "//python/tflite_micro/signal/utils:util",
+        "@absl_py//absl/testing:parameterized",
         requirement("numpy"),
         requirement("tensorflow-cpu"),
     ],
