--- a/signal/tensorflow_core/kernels/BUILD
+++ b/signal/tensorflow_core/kernels/BUILD
@@ -15,12 +15,40 @@ tflm_signal_kernel_library(
 )
 
 tflm_signal_kernel_library(
+    name = "energy_kernel",
+    srcs = ["energy_kernel.cc"],
+    deps = [
+        "//signal/src:complex",
+        "//signal/src:energy",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
     name = "fft_kernel",
     srcs = ["fft_kernels.cc"],
     deps = [
         "//signal/src:fft_auto_scale",
         "//signal/src:irfft",
         "//signal/src:rfft",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
+    name = "framer_kernel",
+    srcs = ["framer_kernel.cc"],
+    deps = [
+        "//signal/src:circular_buffer",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
+    name = "overlap_add_kernel",
+    srcs = ["overlap_add_kernel.cc"],
+    deps = [
+        "//signal/src:overlap_add",
         "@tensorflow_cc_deps//:cc_library",
     ],
 )
