filter bank, stacker, python extensions

--- a/signal/tensorflow_core/kernels/BUILD
+++ b/signal/tensorflow_core/kernels/BUILD
@@ -26,6 +26,27 @@ tflm_signal_kernel_library(
 )
 
 tflm_signal_kernel_library(
+    name = "filter_bank_kernels",
+    srcs = ["filter_bank_kernels.cc"],
+    deps = [
+        "//signal/src:filter_bank",
+        "//signal/src:filter_bank_log",
+        "//signal/src:filter_bank_spectral_subtraction",
+        "//signal/src:filter_bank_square_root",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
+    name = "stacker_kernel",
+    srcs = ["stacker_kernel.cc"],
+    deps = [
+        "//signal/src:circular_buffer",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
     name = "window_kernel",
     srcs = ["window_kernel.cc"],
     deps = [
