--- a/python/tflite_micro/signal/BUILD
+++ b/python/tflite_micro/signal/BUILD
@@ -17,6 +17,8 @@ cc_library(
     deps = [
         ":delay_op_cc",
         ":fft_ops_cc",
+        ":filter_bank_ops_cc",
+        ":stacker_op_cc",
         ":window_op_cc",
     ],
 )
@@ -32,6 +34,8 @@ py_library(
     deps = [
         ":delay_op",
         ":fft_ops",
+        ":filter_bank_ops",
+        ":stacker_op",
         ":window_op",
     ],
 )
@@ -79,6 +83,66 @@ py_test(
     srcs_version = "PY3",
     deps = [
         ":fft_ops",
+        "//python/tflite_micro/signal/utils:util",
+        requirement("numpy"),
+        requirement("tensorflow-cpu"),
+    ],
+)
+
+py_tflm_signal_library(
+    name = "filter_bank_ops",
+    srcs = ["ops/filter_bank_ops.py"],
+    cc_op_defs = ["//signal/tensorflow_core/ops:filter_bank_ops"],
+    cc_op_kernels = [
+        "//signal/tensorflow_core/kernels:filter_bank_kernels",
+    ],
+    deps = [
+        "//python/tflite_micro/signal/utils:freq_to_mel",
+    ],
+)
+
+py_test(
+    name = "filter_bank_ops_test",
+    size = "small",
+    srcs = ["ops/filter_bank_ops_test.py"],
+    data = [
+        "//python/tflite_micro/signal/ops/testdata:filter_bank_accumulation_16k.txt",
+        "//python/tflite_micro/signal/ops/testdata:filter_bank_accumulation_44k.txt",
+        "//python/tflite_micro/signal/ops/testdata:filter_bank_accumulation_8k.txt",
+        "//python/tflite_micro/signal/ops/testdata:filter_bank_spectral_subtraction_test1.txt",
+        "//python/tflite_micro/signal/ops/testdata:filter_bank_square_root_test1.txt",
+        "//python/tflite_micro/signal/ops/testdata:filter_bank_test1.txt",
+    ],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":filter_bank_ops",
+        "//python/tflite_micro/signal/utils:util",
+        requirement("numpy"),
+        requirement("tensorflow-cpu"),
+    ],
+)
+
+py_tflm_signal_library(
+    name = "stacker_op",
+    srcs = ["ops/stacker_op.py"],
+    cc_op_defs = ["//signal/tensorflow_core/ops:stacker_op"],
+    cc_op_kernels = [
+        "//signal/tensorflow_core/kernels:stacker_kernel",
+    ],
+)
+
+py_test(
+    name = "stacker_op_test",
+    size = "small",
+    srcs = ["ops/stacker_op_test.py"],
+    data = [
+        "//python/tflite_micro/signal/ops/testdata:stacker_test1.txt",
+    ],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":stacker_op",
         "//python/tflite_micro/signal/utils:util",
         requirement("numpy"),
         requirement("tensorflow-cpu"),
