--- a/signal/tensorflow_core/kernels/BUILD
+++ b/signal/tensorflow_core/kernels/BUILD
@@ -36,6 +36,18 @@ tflm_signal_kernel_library(
 )
 
 tflm_signal_kernel_library(
+    name = "filter_bank_kernels",
+    srcs = ["filter_bank_kernels.cc"],
+    deps = [
+        "//signal/src:filter_bank",
+        "//signal/src:filter_bank_log",
+        "//signal/src:filter_bank_spectral_subtraction",
+        "//signal/src:filter_bank_square_root",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
     name = "framer_kernel",
     srcs = ["framer_kernel.cc"],
     deps = [
@@ -49,6 +61,15 @@ tflm_signal_kernel_library(
     srcs = ["overlap_add_kernel.cc"],
     deps = [
         "//signal/src:overlap_add",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
+    name = "stacker_kernel",
+    srcs = ["stacker_kernel.cc"],
+    deps = [
+        "//signal/src:circular_buffer",
         "@tensorflow_cc_deps//:cc_library",
     ],
 )
