--- a/signal/tensorflow_core/ops/BUILD
+++ b/signal/tensorflow_core/ops/BUILD
@@ -30,6 +30,14 @@ tflm_signal_kernel_library(
 )
 
 tflm_signal_kernel_library(
+    name = "filter_bank_ops",
+    srcs = ["filter_bank_ops.cc"],
+    deps = [
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
     name = "framer_op",
     srcs = ["framer_op.cc"],
     deps = [
@@ -40,6 +48,14 @@ tflm_signal_kernel_library(
 tflm_signal_kernel_library(
     name = "overlap_add_op",
     srcs = ["overlap_add_op.cc"],
+    deps = [
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
+    name = "stacker_op",
+    srcs = ["stacker_op.cc"],
     deps = [
         "@tensorflow_cc_deps//:cc_library",
     ],
