--- a/tensorflow/lite/micro/python/tflite_size/src/BUILD
+++ b/tensorflow/lite/micro/python/tflite_size/src/BUILD
@@ -1,3 +1,6 @@
+load("@rules_python//python:defs.bzl", "py_library")
+load("@rules_python//python:defs.bzl", "py_binary")
+
 load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
 
 package(
