--- a/tensorflow/lite/micro/testing/BUILD
+++ b/tensorflow/lite/micro/testing/BUILD
@@ -1,3 +1,6 @@
+load("@rules_python//python:defs.bzl", "py_library")
+load("@rules_python//python:defs.bzl", "py_binary")
+
 load("@tflm_pip_deps//:requirements.bzl", "requirement")
 load(
     "//tensorflow:extra_rules.bzl",
