--- a/python/tflite_micro/BUILD
+++ b/python/tflite_micro/BUILD
@@ -1,3 +1,4 @@
+load("@rules_python//python:defs.bzl", "py_library", "py_test")
 load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 load("//python:py_namespace.bzl", "py_namespace")
 load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
