Add hello world codegen example
This PR adds a codegen inference example for the hello world model to
demonstrate how to invoke the code generator and build the generated
source. For now, we're just checking the generated source into the repo
to skip over building out the make rules and also ensuring the generated
source complies with formatting rules.

This also fixes a minor formatting issue in the source templates, as
clang-format now properly complained about it.

BUG=b/295390000

--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -287,6 +287,8 @@ MICRO_LITE_BENCHMARKS := $(wildcard $(TENSORFLOW_ROOT)tensorflow/lite/micro/tool
 MICROLITE_BENCHMARK_SRCS := \
 $(wildcard $(TENSORFLOW_ROOT)tensorflow/lite/micro/tools/benchmarking/*benchmark.cc)
 
+MICRO_LITE_CODEGEN_EXAMPLES := $(shell find $(TENSORFLOW_ROOT)codegen/examples/ -name Makefile.inc)
+
 MICROLITE_TEST_SRCS := \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/fake_micro_context_test.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/flatbuffer_utils_test.cc \
@@ -675,6 +677,9 @@ INCLUDES += -I$(GENERATED_SRCS_DIR)$(TENSORFLOW_ROOT)
 
 # Load the examples.
 include $(MICRO_LITE_EXAMPLE_TESTS)
+
+# Load codegen examples.
+include $(MICRO_LITE_CODEGEN_EXAMPLES)
 
 # Load the integration tests.
 include $(MICRO_LITE_INTEGRATION_TESTS)
