Refactor generators into separate files
This commit also moves more of the structure generation into the python
files instead of the template. Just using the mako template was
challenging for conditional formatting.

--- a/codegen/BUILD
+++ b/codegen/BUILD
@@ -12,6 +12,8 @@ py_library(
         "graph.py",
     ],
     deps = [
+        ":utils",
+        "//codegen/operators:operator",
         "//tensorflow/lite/python:schema_py",
         "//tensorflow/lite/tools:visualize",
     ],
@@ -29,6 +31,13 @@ py_library(
     deps = [
         ":graph",
         requirement("mako"),
+    ],
+)
+
+py_library(
+    name = "utils",
+    srcs = [
+        "utils.py",
     ],
 )
 
