Generate BuiltinData for FullyConnected
Each operator is going to have its own set of BuiltinOptions, which will
translate into an op-specific TfLite Params structure. This change turns
Operator into a base class with common functionality, and adds a
FullyConnected subclass that knows how to generate the
TfLiteFullyConnectedParams struct.

BUG=b/295175961

--- a/codegen/BUILD
+++ b/codegen/BUILD
@@ -13,6 +13,7 @@ py_library(
     ],
     deps = [
         ":utils",
+        "//codegen/operators:factory",
         "//codegen/operators:operator",
         "//tensorflow/lite/python:schema_py",
         "//tensorflow/lite/tools:visualize",
