Break dependency of kernels on MicroGraph
The control flow and resource kernels make calls into MicroGraph by
using the MicroContext::graph() accessor. For interpreter-less invoke,
we don't need a full MicroGraph, only the subset of functionality that
the kernels use. This PR introduces an abstract base class for
MicroGraphInfo, which MicroGraph implements. The kernels only depend on
MicroGraphInfo, but the MicroContext will still have a full MicroGraph.

BUG=b/295174086

--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -66,6 +66,7 @@ cc_library(
         ":memory_helpers",
         ":micro_allocator",
         ":micro_graph",
+        ":micro_graph_info",
         ":micro_log",
         ":micro_profiler_interface",
         "//tensorflow/lite/c:common",
@@ -103,6 +104,16 @@ cc_library(
 )
 
 cc_library(
+    name = "micro_graph_info",
+    hdrs = ["micro_graph_info.h"],
+    deps = [
+        ":micro_common",
+        ":micro_compatibility",
+        ":micro_resource_variable",
+    ],
+)
+
+cc_library(
     name = "micro_graph",
     srcs = ["micro_graph.cc"],
     hdrs = ["micro_graph.h"],
@@ -110,6 +121,7 @@ cc_library(
         ":memory_helpers",
         ":micro_allocator",
         ":micro_common",
+        ":micro_graph_info",
         ":micro_log",
         ":micro_profiler",
         ":micro_resource_variable",
